chore: handle deprecations and optimizations brought by Spring Boot 3.5 and Java 21